# ctest-demo

./: CMakeLists.txt  README.md  test.c
